[project]
name = "cyberbank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18.2",
    "dash-auth>=2.3.0",
    "dash-bootstrap-components>=1.7.1",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "plotly>=6.0.0",
    "requests>=2.32.3",
    "tinydb>=4.8.2",
]
